--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.7",
     "react-toastify": "^9.0.8",
     "redux-thunk": "^2.4.1",
     "styled": "^1.0.0",
@@ -57,6 +58,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-scroll": "^1.8.4",
     "@types/styled-components": "^5.1.25"
   }
 }
